<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dip"
    android:background="@drawable/music_bg"
	>
	<TextView
	    android:id="@+id/title"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	   	android:layout_marginTop="10dp"
	   	android:layout_centerHorizontal="true"
	    android:textSize="10pt"
	    android:textColor="@color/white" 
	    android:text="@string/settings"
     />
	<TextView
		android:id="@+id/screen_setting"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft ="25dp"
		android:layout_below="@id/title"
		android:layout_marginTop="8dp"
		android:textSize="10pt"
		android:textColor="@color/black" 
		android:text="@string/screen_setting"
	/>
	<LinearLayout 
	    android:id="@+id/screen"	    
	    android:layout_width="wrap_content"     
	    android:layout_height="wrap_content"  
	    android:layout_marginLeft ="40dp"
	    android:layout_below="@id/screen_setting"
	    android:orientation="horizontal"
	    >		
		<CheckBox     
		    android:id="@+id/original_size "     
		    android:layout_width="wrap_content"     
		    android:layout_height="wrap_content"  
		    android:layout_marginLeft ="20dp"  
		    android:text="@string/size_original"
		    android:textColor="@color/black"   
		/> 
		<CheckBox     
		    android:id="@+id/size_16_9"     
		    android:layout_width="wrap_content"     
		    android:layout_height="wrap_content"  
		    android:layout_marginLeft ="65dp"  
		    android:text="@string/size_16_9"
		    android:textColor="@color/black"     
		/> 
		<CheckBox     
		    android:id="@+id/size_4_3"     
		    android:layout_width="wrap_content"     
		    android:layout_height="wrap_content"  
		    android:layout_marginLeft ="65dp"  
		    android:text="@string/size_4_3"  
		    android:textColor="@color/black"   
		/> 
		<CheckBox     
		    android:id="@+id/full_screen"     
		    android:layout_width="wrap_content"     
		    android:layout_height="wrap_content"  
		    android:layout_marginLeft ="65dp"  
		    android:text="@string/size_full"  
		    android:textColor="@color/black"   
		/>
	</LinearLayout> 
	<TextView
		android:id="@+id/sound_setting"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft ="25dp"
		android:layout_below="@id/screen"
		android:textSize="10pt"
		android:textColor="@color/black" 
		android:text="@string/sound_setting"
	/>
	<LinearLayout 
	    android:id="@+id/sound"	    
	    android:layout_width="wrap_content"     
	    android:layout_height="wrap_content"  
	    android:layout_marginLeft ="40dp"
	    android:layout_below="@id/sound_setting"
	    android:orientation="horizontal"
	    >		
		<CheckBox     
		    android:id="@+id/sound_left"     
		    android:layout_width="wrap_content"     
		    android:layout_height="wrap_content"  
		    android:layout_marginLeft ="20dp"  
		    android:text="@string/sound_left"    
		    android:textColor="@color/black"  
		/> 
		<CheckBox     
		    android:id="@+id/sound_right"     
		    android:layout_width="wrap_content"     
		    android:layout_height="wrap_content"  
		    android:layout_marginLeft ="78dp"  
		    android:text="@string/sound_right"    
		    android:textColor="@color/black" 
		/> 
		<CheckBox     
		    android:id="@+id/stereo"     
		    android:layout_width="wrap_content"     
		    android:layout_height="wrap_content"  
		    android:layout_marginLeft ="78dp"  
		    android:text="@string/stereo"    
		    android:textColor="@color/black"  
		/> 
	</LinearLayout> 
	<TextView
		android:id="@+id/code"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft ="25dp"
		android:layout_below="@id/sound"
		android:textSize="10pt"
		android:textColor="@color/black" 
		android:text="@string/zimu_code"
	/>
	<LinearLayout 
	    android:id="@+id/zimu_code"	    
	    android:layout_width="wrap_content"     
	    android:layout_height="wrap_content"  
	    android:layout_marginLeft ="40dp"
	    android:layout_below="@id/code"
	    android:orientation="horizontal"
	    >		
		<CheckBox     
		    android:id="@+id/gb"     
		    android:layout_width="wrap_content"     
		    android:layout_height="wrap_content"  
		    android:layout_marginLeft ="20dp"  
		    android:text="@string/GB2312"    
		    android:textColor="@color/black"  
		/> 
		<CheckBox     
		    android:id="@+id/utf"     
		    android:layout_width="wrap_content"     
		    android:layout_height="wrap_content"  
		    android:layout_marginLeft ="40dp"  
		    android:text="@string/UTF_8"      
		    android:textColor="@color/black" 
		/> 
		<CheckBox     
		    android:id="@+id/gbk"     
		    android:layout_width="wrap_content"     
		    android:layout_height="wrap_content"  
		    android:layout_marginLeft ="47dp"  
		    android:text="@string/GBK"    
		    android:textColor="@color/black"  
		/> 
	</LinearLayout> 	
</RelativeLayout>