<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/music_bg">
    <TextView
	    android:id="@+id/current_music_title"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	   	android:layout_marginTop="7dp"
	   	android:layout_centerHorizontal="true"
	    android:textSize="10pt"
	    android:textColor="@color/white" 
	    android:text="@string/bg_music_list"
     />
     <TextView
	    android:id="@+id/no_bg_music_title"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	   	android:layout_centerHorizontal="true"
	   	android:layout_centerVertical="true"
	    android:textSize="10pt"
	    android:textColor="@color/black" 
	    android:visibility="gone"
	    android:text="@string/no_bg_music"
     />
   <ListView android:id="@+id/all_music_list"
        android:layout_width="550dip"
        android:layout_height="400dip"   
 		android:layout_marginTop="50dip" 
 		android:divider="@drawable/music_line"
 		/> 
 	<TextView
	    android:id="@+id/hint_info"
	    android:layout_width="550dip"
		android:layout_height="wrap_content"
	   	android:layout_below="@id/all_music_list"
	   	android:layout_centerHorizontal="true"	    
	    android:gravity="center_vertical"
	    android:textSize="10pt"
	    android:textColor="@color/white" 
	    android:background="@color/text_gray_black"
	     android:text="@string/ok_delete"
     /> 
		 
</RelativeLayout>	